# mcp-server

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.cursor/rules/: kubeflow.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/scripts/: test_scripts.py  update_overrides.py
.github/workflows/: check-pr-title.yaml  dco.yaml  docker-publish.yaml  docs.yaml  gh-workflow-approve.yaml  github-stale.yaml  osv-scanner.yaml  publish.yaml  release.yaml  sync-labels.yaml  test-python.yaml  welcome-new-contributors.yaml
docs/: benchmarks.md
docs/design/: agent-provider-architecture.md
docs/proposals/: KEP#0001.md
docs/release/: RELEASE.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
examples/agents/: README.md
examples/agents/litellm/: README.md  run.py
examples/agents/ollama/: README.md  run.py
examples/deployment/litellm-gateway/: README.md
kubeflow_mcp/: __main__.py  cli.py  cli_test.py
kubeflow_mcp/agents/: __init__.py  base.py  dynamic_tools.py  litellm_provider.py  ollama.py  ollama_repl.py  terminal_ui.py
kubeflow_mcp/common/: constants.py  constants_test.py  types.py  types_test.py  utils.py  utils_test.py
kubeflow_mcp/core/: auth.py  auth_test.py  config.py  config_test.py  dynamic_tools.py  dynamic_tools_test.py  health.py  health_test.py  logging.py  logging_test.py  middleware.py  policy.py  policy_test.py  prompts_test.py  resilience.py  resilience_test.py  resources.py  resources_test.py  security.py  security_test.py  server.py  server_test.py  telemetry.py
kubeflow_mcp/hub/api/: __init__.py
kubeflow_mcp/optimizer/api/: __init__.py
kubeflow_mcp/trainer/: __init__.py  trainer_test.py
kubeflow_mcp/trainer/api/: __init__.py  discovery.py  discovery_test.py  lifecycle.py  lifecycle_test.py  monitoring.py  monitoring_test.py  planning.py  planning_test.py  platform.py  platform_test.py  sdk_contracts_test.py  test_training_utils.py  training.py  training_test.py  workflow_test.py
kubeflow_mcp/trainer/constants/: __init__.py
kubeflow_mcp/trainer/resources/: platform-fixes.md  training-patterns.md  troubleshooting.md
kubeflow_mcp/trainer/types/: __init__.py
scripts/: check_version.py
src/kubeflow_mcp/agents/: __init__.py  dynamic_tools.py  ollama.py
tests/: conftest.py  test_agent_providers.py
tests/benchmarks/: __init__.py  benchmarks_runner.py  conftest.py  report.py  test_latency.py
tests/e2e/: __init__.py
tests/unit/core/: __init__.py  test_middleware.py  test_security.py  test_telemetry.py  test_tool_integrity.py
tests/unit/trainer/: __init__.py  test_architecture.py  test_make_train_func.py  test_monitoring.py  test_planning.py  test_training_script_wrapper.py
