[project]
name = "kubeflow-mcp"
version = "0.1.0-dev"
requires-python = ">=3.10"
description = "Model Context Protocol server for AI-assisted development with Kubeflow"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Kubeflow Authors"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "kubeflow>=0.4.0",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
hub = ["kubeflow[hub]>=0.4.0"]
spark = ["kubeflow[spark]>=0.4.0"]
all = ["kubeflow[hub]>=0.4.0", "kubeflow[spark]>=0.4.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.9",
    "pip-audit>=2.7",
]

[project.scripts]
kubeflow-mcp = "kubeflow_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubeflow_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["kubeflow_mcp", "tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["kubeflow_mcp", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C90",  # mccabe cyclomatic complexity
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["kubeflow_mcp"]

[tool.coverage.run]
source = ["kubeflow_mcp"]
omit = ["*_test.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
