[project]
name = "kubeflow-mcp"
version = "0.1.0-dev"
requires-python = ">=3.10"
description = "Model Context Protocol server for AI-assisted development with Kubeflow"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Kubeflow Authors"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "kubeflow>=0.4.0",
    "huggingface-hub>=0.20",
]

[dependency-groups]
# Keep in sync with [project.optional-dependencies] dev (pip / uv --extra dev).
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[tool.uv]
default-groups = ["dev"]

[project.optional-dependencies]
hub = ["kubeflow[hub]>=0.4.0"]
spark = ["kubeflow[spark]>=0.4.0"]
# CLI agent: install only what you need (Ollama vs LiteLLM).
agents-ollama = [
    "llama-index-core>=0.12",
    "llama-index-llms-ollama>=0.4",
    "rich>=13.0",
]
agents-litellm = [
    "litellm>=1.0",
    "rich>=13.0",
]
# All agent backends (convenience; same as agents-ollama + agents-litellm deps).
agents = [
    "llama-index-core>=0.12",
    "llama-index-llms-ollama>=0.4",
    "rich>=13.0",
    "litellm>=1.0",
]
all = ["kubeflow[hub]>=0.4.0", "kubeflow[spark]>=0.4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pip-audit>=2.7",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
]

[project.scripts]
kubeflow-mcp = "kubeflow_mcp.cli:cli"

[project.entry-points."kubeflow_mcp.providers"]
ollama = "kubeflow_mcp.agents.ollama:OllamaProvider"
litellm = "kubeflow_mcp.agents.litellm_provider:LiteLLMProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubeflow_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["kubeflow_mcp", "tests"]
addopts = "-v --tb=short --cov=kubeflow_mcp --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["kubeflow_mcp", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C90",  # mccabe cyclomatic complexity
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["kubeflow_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["kubeflow_mcp"]
omit = [
    "*_test.py",
    "*/kubeflow_mcp/agents/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
